--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= content_tag(:div, "hello",
+<%= content_tag(:div, "",
  id:"app", data: {
  	controller: "react"
  })%>
