--- a/app/javascript/controllers/Rating.css
+++ b/app/javascript/controllers/Rating.css
@@ -16,3 +16,23 @@
     font-family: "Font Awesome 5 Brands","Font Awesome 5 Free";
     content: "\2605\2605\2605\2605\2605";
   }
+
+  .SubmitBtn {
+    color: #fff;
+    text-align: center;
+    background: green;
+    border-radius: 4px;
+    padding:  12px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: ease-in-out 0.1s;
+    border: 1px solid #fff;
+    width: 94%;
+    margin-top: 20px;
+  }
+  .SubmitBtn:hover {
+        background: rgb(165, 187, 165);
+        color: #000;
+        border: 1px solid rgb(165, 187, 165);
+    }
+  
